1558 IE10 navbar tab text alignment fix

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -10125,7 +10125,8 @@ ul.promotion-sub-tnc.bullets {
 		padding:0;
 	}
 	.protect-save-enjoy-tab{
-	    font-size: 24px;	
+	    font-size: 24px;
+	    margin: auto;	
 	}
 	ul.menutab-V2{
 		flaot:right;
